--- a/manifest.json
+++ b/manifest.json
@@ -27,10 +27,10 @@
     "default_popup": "popup.html",
     "default_title": "Course Compare",
     "default_icon": {
-      "16": "icons/icon16.png"
+      "16": "images/gai.png"
     }
   },
   "icons": {
-    "16": "icons/icon16.png"
+    "16": "images/gai.png"
   }
 }
