--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "lint": "eslint src/**/*.ts",
     "test": "jest"
   },
-  "keywords": ["browser-extension", "education", "university", "comparison"],
+  "keywords": [
+    "browser-extension",
+    "education",
+    "university",
+    "comparison"
+  ],
   "author": "Your Name",
   "license": "MIT",
   "devDependencies": {
@@ -28,8 +33,7 @@
     "ts-jest": "^29.1.1",
     "ts-loader": "^9.4.4",
     "typescript": "^5.2.2",
-    "webpack": "^5.88.2",
-    "webpack-cli": "^5.1.4"
-  },
-  "dependencies": {}
+    "webpack": "^5.99.9",
+    "webpack-cli": "^6.0.1"
+  }
 }
